Shortcut navigational downloads

For cases like blob or data URLs we don't have to go through the
navigation code path. Instead, start the download directly

BUG=802011
R=mkwst@chromium.org

Change-Id: I76b9006d61fc4df7b9f1760674f1f2e663ac2c4a